--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,13 +33,17 @@ file.reference.catalina.jar=C:\\Program Files\\Apache Software Foundation\\Tomca
 file.reference.commons-modeler-2.0.1.jar=D:\\Abhishek\\Backup\\Downloads\\commons-modeler-2.0.1.jar
 file.reference.javassist.jar=D:\\Abhishek\\Projects\\APM\\jboss-javassist-javassist-aabe16c\\javassist.jar
 file.reference.mysql-connector-java-5.1.39-bin.jar=D:\\Abhishek\\Java\\mysql-connector-java-5.1.39-bin.jar
+file.reference.sjk-plus-0.4.2.jar=D:\\Abhishek\\Backup\\Downloads\\sjk-plus-0.4.2.jar
+file.reference.tools.jar=C:\\Program Files\\Java\\jdk1.8.0_65\\lib\\tools.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.javassist.jar}:\
     ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
     ${file.reference.catalina.jar}:\
-    ${file.reference.commons-modeler-2.0.1.jar}
+    ${file.reference.commons-modeler-2.0.1.jar}:\
+    ${file.reference.tools.jar}:\
+    ${file.reference.sjk-plus-0.4.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
